# oracle

./: .gitignore  Cargo.toml  LICENSE  Makefile  NOTES-surfpool.md  README.md  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/workflows/: ci.yml  docs.yml  publish.yml
.serena/: project.yml
app/: README.md  package.json  playwright.candles.config.ts  playwright.config.ts  server.mjs  vite.config.ts  vitest.config.ts
app/e2e/: cranks.spec.ts  dev-full.ts  dev-seed.ts  (+12 more)
docs/: protocol-scenarios.md
docs-site/: README.md  docs.json  index.mdx  style.css
indexer/: Cargo.toml  README.md
indexer/src/: api.rs  db.rs  decoder.rs  main.rs  meta_fetch.rs  oracle_accounts.rs  processor.rs  state.rs
indexer/src/market/: api.rs  db.rs  decoder.rs  json.rs  mod.rs  price_subscribe.rs  processor.rs  rpc.rs
programs/kassandra/: Cargo.toml  README.md
programs/kassandra-market/: Cargo.toml  README.md
programs/kassandra-market/src/: error.rs  instruction.rs  kass_oracle.rs
programs/kassandra-market/src/cpi/: metadao.rs
programs/kassandra-market/src/processor/: activate.rs  claim_lp.rs  collect_fee.rs  contribution.rs  create_market.rs  mod.rs  refund.rs  update_config.rs
programs/kassandra-market/tests/: activate.rs  cancel.rs  claim_lp.rs  close_market.rs  collect_fee.rs  contribute.rs  cpi_wire.rs  create_market.rs  init_config.rs  lifecycle.rs  lifecycle_active.rs  metadao_pda.rs  parity.rs  refund.rs  resolve_market.rs  state_layout.rs  update_config.rs
programs/kassandra-market/tests/common/: mod.rs
programs/kassandra/src/: clock.rs  config.rs  error.rs  instruction.rs  lib.rs  stake_floor.rs  state.rs
programs/kassandra/src/cpi/: metadao.rs
programs/kassandra/src/processor/: advance_phase.rs  claims.rs  close_ai_claim.rs  close_market.rs  create_oracle.rs  finalize_ai_claims.rs  finalize_facts.rs  finalize_oracle.rs  finalize_proposals.rs  guards.rs  init_protocol.rs  mod.rs  open_challenge.rs  propose.rs  resolve_deadend.rs  set_config.rs  settle_challenge.rs  submit_ai_claim.rs  submit_fact.rs  sweep_oracle.rs  write_oracle_meta.rs
programs/kassandra/tests/: ai_claim.rs  challenge_e2e.rs  claims.rs  compute_units.rs  compute_units.snap  create_fee.rs  create_oracle.rs  dispatch.rs  dispute_harness.rs  emissions.rs  finalize_facts.rs  finalize_oracle.rs  finalize_proposals.rs  governance_setup.rs  init_protocol.rs  invariants.proptest-regressions  invariants.rs  lifecycle_e2e.rs  metadao_cpi.rs  open_challenge.rs  oracle_meta.rs  propose.rs  resolve_deadend.rs  set_config.rs  settle_challenge.rs  settlement_e2e.rs  state_layout.rs  submit_fact.rs  sweep.rs  vote_fact.rs
programs/kassandra/tests/common/: mod.rs
programs/oracles/: Cargo.toml  README.md
programs/oracles/src/: clock.rs  config.rs  fee.rs  instruction.rs  plurality.rs  price.rs  rent.rs  reward.rs  state.rs
programs/oracles/src/cpi/: metadao.rs  metadao_v06.rs  mod.rs
programs/oracles/src/processor/: advance_phase.rs  close_ai_claim.rs  close_market.rs  finalize_ai_claims.rs  finalize_facts.rs  finalize_oracle.rs  guards.rs  init_protocol.rs  kass_price.rs  mod.rs  resolve_deadend.rs  set_governance.rs  submit_ai_claim.rs  submit_fact.rs  vote_fact.rs
programs/oracles/tests/: advance_phase.rs  ai_claim.rs  challenge_e2e.rs  claims.rs  closure.rs  compute_units.rs  create_fee.rs  create_oracle.rs  deadend_settlement.rs  dispatch.rs  dispute_harness.rs  emissions.rs  finalize_facts.rs  finalize_oracle.rs  finalize_proposals.rs  governance_seam.rs  governance_setup.rs  init_protocol.rs  invariants.rs  kass_price.rs  lifecycle_e2e.rs  metadao_cpi.rs  metadao_v06_cpi.rs  open_challenge.rs  oracle_meta.rs  propose.rs  recon_lp_resolution.rs  resolve_deadend.rs  set_config.rs  settle_challenge.rs  settlement_e2e.rs  smoke.rs  state_layout.rs  submit_fact.rs  sweep.rs  vote_fact.rs
programs/oracles/tests/ai_claim/: finalize.rs  submit.rs
programs/oracles/tests/challenge_e2e/: donation.rs  fraud.rs  fuzz.rs  honest.rs  lifecycle_common.rs  ops.rs  support.rs
programs/oracles/tests/claims/: guards.rs  invalid_deadend.rs  proposer_reward.rs  resolved_matrix.rs
programs/oracles/tests/common/: claim_ix.rs  claim_seed.rs  ctx_accessors.rs  ctx_governance.rs  ctx_oracle.rs  ctx_seeding.rs  ctx_send.rs  ctx_setup.rs  ix_builders.rs  mod.rs
programs/oracles/tests/finalize_facts/: agreed.rs  gating.rs
programs/oracles/tests/finalize_oracle/: gating.rs  resolve.rs
programs/oracles/tests/invariants/: challenge_terminal.rs  deadend_settlement.rs  full_dispute.rs  proposal_phase.rs  resolved_settlement.rs  slashed_deadend_settlement.rs
programs/oracles/tests/metadao_v06_cpi/: vault_split.rs  wire_format.rs
programs/oracles/tests/open_challenge/: amm_binding.rs  escrow.rs  fixture.rs  guards.rs  support.rs
programs/oracles/tests/settle_challenge/: fees.rs  fixtures.rs  guards.rs  resolve.rs  support.rs
programs/oracles/tests/settlement_e2e/: emission_seeded.rs  fact_vote.rs  real_dispute.rs
runner/: Cargo.toml  HASHING.md  NOTES.md  PROMPT.md  README.md
runner/src/: cli.rs  constants.rs  fetch.rs  hashing.rs  lib.rs  prompt.rs  rpc.rs  submit.rs
runner/tests/: e2e.rs
scripts/: README.md  dev-full.sh  dev-up.sh  e2e-playwright-candles.sh  e2e-playwright-fork.sh  e2e-playwright-indexer.sh  e2e-playwright.sh  fetch-metadao-v06.sh  fetch-metadao.sh  sync-version.mjs
sdk/: README.md  package.json
sdk-market/: README.md  package.json  tsconfig.json  vitest.config.ts
sdk-rs/: Cargo.toml
sdk-rs-market/: Cargo.toml  README.md
sdk-rs-market/src/: pda.rs
sdk-rs-market/tests/: account_metas.rs
sdk-rs/src/: accounts.rs  config_params.rs  ix.rs  lib.rs  pda.rs
sdk-rs/tests/: builders.rs
sdks/markets/rust/: Cargo.toml  README.md
sdks/markets/rust/src/: ix.rs  lib.rs  metadao.rs
sdks/markets/rust/tests/: account_metas.rs
sdks/markets/rust/tests/account_metas/: kassandra.rs  metadao.rs
sdks/oracles/rust/: Cargo.toml
sdks/oracles/rust/src/: accounts.rs  config_params.rs  ix.rs  lib.rs  pda.rs
sdks/oracles/rust/tests/: builders.rs
skills/: README.md
(+544 files in other folders)
