[workspace]
resolver = "2"
members = ["programs/kassandra", "runner", "sdk-rs"]

[workspace.dependencies]
pinocchio = "0.8"
pinocchio-pubkey = "0.2"
pinocchio-system = "0.2"
pinocchio-token = "0.3"
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }

[profile.release]
overflow-checks = true
