[workspace]
resolver = "2"
members = [
    "programs/oracles",
    "programs/markets",
    "runner",
    "sdks/oracles/rust",
    "sdks/markets/rust",
    "indexer",
]

# The single source of truth for every crate's version: each member sets
# `version.workspace = true`, and the TS packages are stamped from this same value
# by `scripts/sync-version.mjs`. Bump here (and re-run the sync) to release.
# `license`/`repository` are inherited the same way (`*.workspace = true`) so the
# published crates carry the metadata crates.io requires.
[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/kassandra-market/oracle"

# Every dependency version lives here; member crates reference them with
# `{ workspace = true }` (adding only crate-specific features).
[workspace.dependencies]
# ---- internal crates (path deps) ----
# The `version` fields let `cargo publish` resolve these as real crates.io deps (a
# path-only dep can't be published). They MUST equal [workspace.package].version
# above — `scripts/sync-version.mjs` keeps them (and the TS packages) in lockstep.
kassandra-oracles-program = { path = "programs/oracles", version = "0.1.0" }
kassandra-oracles-sdk = { path = "sdks/oracles/rust", version = "0.1.0" }
# The prediction-market program + its Rust SDK (merged in from kassandra-market).
# The indexer depends on the program crate (state structs + `ID`) only — it is
# pinocchio/bytemuck based and pulls NO solana-sdk, so the shipped indexer stays
# on the granular v3 client stack. The market program's own dev-tests + sdks/markets/rust
# are a solana-sdk v2 "island" (they pin v2/litesvm-0.6/spl-token-6 directly, not
# via the workspace, so both majors coexist without a cross-crate type split).
kassandra-markets-program = { path = "programs/markets", version = "0.1.0", default-features = false, features = ["no-entrypoint"] }
kassandra-markets-sdk = { path = "sdks/markets/rust", version = "0.1.0" }

# ---- on-chain (pinocchio) stack ----
# pinocchio rides the solana-address v2 granular crate; that is the CURRENT
# (Agave/"v4"-era) release of that crate — the granular solana crates version
# independently, so 2.x here is not "legacy". It coexists cleanly with the v3
# client crates below.
pinocchio = "0.11.2"
pinocchio-system = "0.6"
pinocchio-token = "0.6"
solana-address = "2"

# ---- client-side solana crates (v3 — one major everywhere: sdks/oracles/rust, runner,
#      indexer, and the test harness, so there are no cross-crate type splits) ----
solana-pubkey = { version = "3", features = ["curve25519"] }
solana-instruction = "3"
solana-hash = "3"
solana-message = "3"
solana-keypair = "3"
solana-signer = "3"
solana-signature = "3"
solana-transaction = { version = "3", features = ["bincode"] }
solana-commitment-config = "3"

# ---- shared utilities ----
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
bs58 = "0.5"
hex = "0.4"
base64 = "0.22"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
bincode = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "full"] }
# `http2` for the indexer's outbound RPC; harmless for the runner.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"] }

# ---- indexer (Carbon → Postgres, read API) ----
# The oracle side crawls transactions (instruction/event log); the market side
# indexes accounts (gpa snapshot + program-subscribe live tail). One binary runs
# both Carbon pipelines into one Postgres + one axum server.
carbon-core = "1.0.0"
carbon-rpc-transaction-crawler-datasource = "1.0.0"
carbon-rpc-gpa-datasource = "1.0.0"
carbon-rpc-program-subscribe-datasource = "1.0.0"
axum = "0.8"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tower-http = { version = "0.7", features = ["cors"] }
# Market RPC gateway (typed endpoints: blockhash / account / sendTransaction /
# signature status) — the nonblocking v3 client stack.
solana-rpc-client = { version = "3", default-features = false }
solana-rpc-client-api = "3"
solana-transaction-status = "3"

# Per-market AMM price subscription (websocket accountSubscribe → price series):
# the nonblocking pubsub client + the config/response + UiAccount types its
# `account_subscribe` uses. Pinned to the same v3 line as the rpc client (already
# in the lockfile transitively via the carbon program-subscribe datasource).
solana-pubsub-client = { version = "3", default-features = false }
solana-rpc-client-types = "3"
solana-account-decoder-client-types = "3"
futures-util = "0.3"

# Dependency-resolution fix (carried from kassandra-market): the carbon gpa /
# program-subscribe datasources pull `solana-client -> solana-keypair -> five8 ->
# five8_core 0.1.x`, which gates `impl Error for DecodeError` behind a `std`
# feature the graph otherwise leaves off, breaking the `solana-keypair` build.
# Feature unification is additive, so enabling `std` here turns it on graph-wide.
five8_core = { version = "0.1.2", features = ["std"] }

# ---- dev/test-only ----
litesvm = "0.13"
spl-token = { version = "9", features = ["no-entrypoint"] }
proptest = "1"
# Granular crates the test harness needs beyond the client set above. Versions
# track litesvm 0.13's pins so the error/result types match exactly (note
# solana-instruction-error is independently at v2).
solana-account = "3"
solana-clock = "3"
solana-instruction-error = "=2.2.0"
solana-transaction-error = "3"
solana-sdk-ids = "3"
solana-compute-budget-interface = "3"

[profile.release]
overflow-checks = true
