[package]
name = "kassandra-runner"
version.workspace = true
edition = "2021"
description = "Off-chain, reproducible AI runner for Kassandra oracles: assembles the pinned prompt + agreed facts, calls a model behind a generic provider trait, and emits the on-chain claim metadata (model_id/params_hash/io_hash + option)."
# An off-chain binary, not a library — not released to crates.io.
publish = false

[lib]
name = "kassandra_runner"

[[bin]]
name = "kassandra-runner"
path = "src/main.rs"

[dependencies]
# The Rust client SDK is the runner's ONLY interface to the on-chain program:
# it re-exports the account layouts + constants (via `kassandra_oracles_sdk::accounts`),
# the `Ix` discriminants, `PROGRAM_ID`, the PDA derivations, and the instruction
# builders. The program crate is pulled in transitively (with `no-entrypoint`) by
# the SDK, so there is no cross-crate drift and the runner never names it directly.
kassandra-oracles-sdk = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
# Pod-decode the shared on-chain account structs read over RPC (Task I3).
bytemuck = { workspace = true }
# Base58 pubkey <-> bytes (owner verification) + base64 account-data decode for
# the JSON-RPC getAccountInfo/getProgramAccounts responses (Task I3). Both are
# small, pure-Rust; no solana-client / solana-sdk pulled in.
bs58 = { workspace = true }
base64 = { workspace = true }
# Byte<->hex for the canonical hash/payload string form (`to_hex`) + content_hash parse.
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Build + SIGN the `submit_ai_claim` transaction with the split, granular
# solana-* crates (correct legacy-message serialization + ed25519 signing) —
# deliberately NOT `solana-sdk` / `solana-client`. Send + confirm rides the same
# reqwest `JsonRpc` transport as the I3 fetch (see `rpc.rs`), so no second RPC
# stack. `curve25519` on solana-pubkey (workspace dep) enables host-side PDA
# derivation (`find_program_address`); `bincode` on solana-transaction enables the
# wire serialization + `Transaction::new`/`sign`. These are host-only deps for the
# runner binary and do not touch the on-chain (pinocchio) program.
solana-pubkey = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
# The `verify` feature adds `Transaction::verify()` for the offline sign tests
# (ed25519 signature check against the payer pubkey) without shipping it in the
# release binary. Layered on top of the workspace dep's `bincode`.
solana-transaction = { workspace = true, features = ["verify"] }
