[package]
name = "kassandra-market-sdk"
version = "0.1.0"
edition = "2021"

# The market Rust SDK is part of the solana-sdk v2 island (see the market
# program's Cargo.toml). Versions are pinned directly, NOT via the workspace
# (which is on the granular v3 client stack), so both majors coexist.
[dependencies]
solana-sdk = "2"
spl-token = { version = "6", features = ["no-entrypoint"] }
