[package]
name = "kassandra-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for the Kassandra dispute-core program: PDA derivations, instruction builders, and account decoders. Single source of truth is the on-chain program (kassandra-program), so there is no cross-crate drift."

[lib]
name = "kassandra_sdk"

[dependencies]
# The on-chain program, as a plain host library (no SBF entrypoint). Provides the
# canonical Ix discriminants, config seeds/constants, and the account layout
# structs the decoders return — so the SDK never re-declares the wire contract.
kassandra-program = { path = "../programs/kassandra", features = ["no-entrypoint"] }

# Granular solana client crates (NOT solana-sdk / solana-client): just the pieces
# needed to derive PDAs and emit a client `Instruction`. `curve25519` enables
# host-side `find_program_address`.
solana-pubkey = { version = "2", features = ["curve25519"] }
solana-instruction = "2"

bytemuck = { workspace = true }
