[package]
name = "kassandra-oracles-program"
version.workspace = true
edition = "2021"
description = "On-chain Kassandra oracle (dispute-core) Solana program: instruction discriminants, account layouts, and processing logic. The canonical wire contract the client SDKs build on."
license.workspace = true
repository.workspace = true
# The integration tests carry ~6.5 MiB of external program .so fixtures (meteora,
# squads, metadao) for LiteSVM CPI — dev-only, kept out of the published crate.
exclude = ["tests/"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
bytemuck = { workspace = true }
# `state::Pubkey` aliases pinocchio's `Address` (a `repr(transparent)` newtype
# over `[u8; 32]`); the `bytemuck` feature gives it `Pod`/`Zeroable` so the
# zero-copy account structs keep deriving them.
solana-address = { workspace = true, features = ["bytemuck"] }

# The PDA helpers (`Pubkey::find_program_address` / `create_program_address`)
# are SBF syscalls on-chain but live behind solana-address's `curve25519`
# feature off-chain. Enable it for non-Solana targets so the native lib (built
# by `cargo test`) compiles; the SBF build takes the syscall path and never
# pulls curve25519-dalek (it is target-gated to non-Solana).
[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-address = { workspace = true, features = ["curve25519"] }

[dev-dependencies]
litesvm = { workspace = true }
spl-token = { workspace = true }
proptest = { workspace = true }
# Granular solana client crates (v3), replacing the `solana-sdk` meta-crate — it
# only ships at v4 (→ pubkey v4), which would clash with spl-token 9's pubkey v3.
solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-instruction = { workspace = true }
solana-transaction = { workspace = true }
solana-message = { workspace = true }
solana-hash = { workspace = true }
solana-account = { workspace = true }
solana-clock = { workspace = true }
solana-instruction-error = { workspace = true }
solana-transaction-error = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-compute-budget-interface = { workspace = true }
# The Rust client SDK — the test harness builds instructions + derives PDAs
# through it instead of hand-rolling account metas and payload bytes. A direct
# path dep (NOT the workspace dep, which carries a `version` for crates.io): a
# versionless path dev-dependency is stripped from the published manifest, which
# both keeps dev-only deps out of the release AND breaks the publish cycle
# (kassandra-oracles-sdk itself depends on this crate).
kassandra-oracles-sdk = { path = "../../sdks/oracles/rust" }

[features]
no-entrypoint = []
